--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Apps Development</div>
+                        <div class="text">App Development</div>
                         <p>I can build native apps using React Native</p>
                     </div>
                 </div>
