--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My services</h2>
+            <h2 class="title">My Skills</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Development</div>
-                        <p>I can build end-to-end website using my skills.</p>
+                        <p>I can build fully responsive websites using MERN stack.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -135,7 +135,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>React</span>
-                            <span>60%</span>
+                            <span>50%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
